# job-board-vibecoded

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  color.txt  docker-compose.yml  package-lock.json  plan.md  pyproject.toml
config/: profile.example.yaml  settings.example.yaml  sources.example.yaml
docs/: colab-model.md  labscout-progress.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx  FilterSidebar.tsx  JobCard.tsx  JobDetailPanel.tsx  JobList.tsx  SearchModal.tsx  Skeleton.tsx  StatsBar.tsx  TagField.tsx  Toast.tsx  ui.tsx
frontend/src/hooks/: queries.ts  useCheckLinks.ts  (+3 more)
src/job_alerts/: __init__.py  __main__.py  cli.py  config.py  database.py  enrich.py  filtering.py  http.py  logging_setup.py  models.py  normalization.py  pipeline.py  profile.py  research.py  scheduler.py  scoring.py  taxonomy.py
tests/: __init__.py  conftest.py  test_api.py  test_assessment_cache.py  test_dashboard_queries.py  test_dashboard_service.py  test_deduplication.py  test_discord_formatting.py  test_enrich.py  test_filtering.py  test_hidden.py  test_http_denylist.py  test_json_api.py  test_linkedin_posts.py  test_llm.py  test_match.py  test_migration.py  test_new_filters.py  test_normalization.py  test_pipeline.py  test_profile.py  test_research.py  test_scoring.py  test_source_health.py  test_sources.py  test_tailoring.py  test_taxonomy.py  test_translation_cache.py  test_two_pass.py
tests/fixtures/: arbeitsagentur_sample.json  euraxess_sample.json
(+33 files in other folders)
