[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "germany-research-job-alerts"
version = "1.0.0"
description = "Finds student research positions across Germany and sends new ones to Discord."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "APScheduler>=3.10",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pypdf>=4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
job-alerts = "job_alerts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:job_alerts.*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "B008",
    # RUF001/2/3 flag "ambiguous" Unicode like the en dash. This project exists
    # to process German job postings, whose titles genuinely contain "–", "ä"
    # and "ß", and several regexes match those characters on purpose. The rule
    # is a false positive for this domain in every current instance.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
